--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -56,9 +56,9 @@
   vertical-align: middle;
 }
 
-.btn-lg-orange {
-  background-color: orange;
-  border-color: orange;
+.btn-lg-dark-blue {
+  background-color: #112D4E;
+  border-color: #112D4E;
   color: white;
   padding: 10px 16px;
   font-size: 20px;
