--- a/app/views/prescriptions/create.js.erb
+++ b/app/views/prescriptions/create.js.erb
@@ -1,1 +1,1 @@
-$('#prescription_status').html('<div class="btn-lg-orange">Prescription pending</div>');
+$('#prescription_status').html('<div class="btn-lg-dark-blue">Prescription pending</div>');
