--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,7 +53,7 @@
                   <% if exam.prescription %>
                     <% if exam.prescription.status == "Pending" %>
                       <div class="flexxbox">
-                        <p class="flexx-item" style="color: orange;">PRESCRIPTION STATUS: PENDING</p>
+                        <p class="flexx-item" style="color: #112D4E;">PRESCRIPTION STATUS: PENDING</p>
                       </div>
                     <% elsif exam.prescription.status == "Sent" %>
                       <div class="flexxbox">
