pdf attached in mail

--- a/app/views/prescription_mailer/prescription.html.erb
+++ b/app/views/prescription_mailer/prescription.html.erb
@@ -1,5 +1,5 @@
 <p>Hi <%= @user.first_name %> <%= @user.last_name %>,</p>
 
-<p>Please fin attached your prescription reviewed by Doctor <%= @ophtalmo.first_name %> <%= @ophtalmo.last_name %>.</p>
+<p>Please find attached your prescription reviewed by Doctor <%= @ophtalmo.first_name %> <%= @ophtalmo.last_name %>.</p>
 
 <p>Hope you had a good time on EasyGlasses !</p>
