--- a/app/views/prescription_mailer/prescription.text.erb
+++ b/app/views/prescription_mailer/prescription.text.erb
@@ -1,5 +1,5 @@
 Hi <%= @user.first_name %> <%= @user.last_name %>,
 
-Please fin attached your prescription reviewed by Doctor <%= @ophtalmo.first_name %> <%= @ophtalmo.last_name %>.
+Please find attached your prescription reviewed by Doctor <%= @ophtalmo.first_name %> <%= @ophtalmo.last_name %>.
 
 Hope you had a good time on EasyGlasses !
