--- a/app/views/log_in/_log_in_modal.html.erb
+++ b/app/views/log_in/_log_in_modal.html.erb
@@ -9,7 +9,7 @@
         <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
           <div class="form-inputs container">
             <div class="row">
-              <div class="col-xs-6 col-sm-6" style="margin:auto"><%= f.input :email, required: false, autofocus: true, placeholder: "Email", label: false %></div>
+              <div class="col-xs-6 col-sm-6" style="margin:auto"><%= f.input :email, required: false, placeholder: "Email", label: false %></div>
             </div>
             <div class="row">
               <div class="col-xs-6 col-sm-6"><%= f.input :password, required: false, placeholder: "Password", label: false %></div>
