--- a/app/views/exams/desktop_onboarding.html.erb
+++ b/app/views/exams/desktop_onboarding.html.erb
@@ -75,7 +75,7 @@
 <div id="step_3" class="hidden">
    <div class="banner-start-test" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url(<%= image_url 'start_the_test.jpg' %>); background-position: center center;">
     <div class="onboarding-banner-content">
-      <h1>We will now send you an SMS on your smartphone: <br> follow the instructions carefully, the test should take 5 minutes.</h1>
+      <h1>'Start the test now!', we will send you an SMS on your smartphone: <br> follow the instructions carefully, the test should take 5 minutes.</h1>
       <div><%= f.input :exam_id, as: :hidden, input_html: { value: params[:id] } %></div>
       <div style="margin-top: 7%"><%= f.submit "Start the test now!", class: "btn btn-primary btn-lg" %></div>
     </div>
