changements sur la home page et edit du user

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -73,11 +73,8 @@ padding-top: 30px;
   display: flex;
   align-items:center;
   justify-content:center;
-  padding: 20px;
+  padding: 20px 0 42px 0;
   color: white;
-  h2 {
-    margin-top: 0;
-  }
   p {
     margin-bottom: 25px;
   }
