--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
         </ul>
       </div>
       <div class="col-xs-8 text-right">
-        <p>This is a Rails prototype made @ LeWagon</p>
+        <p>EasyGlasses beta version</p>
       </div>
     </div>
   </div>
