--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
 </div>
 <div class="wrapper wrapper-grey">
   <div class="container">
-    <h2 class="text-center" style="color: #3F72AF; padding-top:45px;"><strong>How it works</strong></h2>
+    <h2 class="text-center" style="color: #3F72AF;"><strong>How it works</strong></h2>
     <div class="row">
       <div class="col-xs-12 col-md-3 text-center">
         <i class="fa fa-sign-in icon"></i>
@@ -48,9 +48,9 @@
   <div class="container text-center">
     <div class="wrapper-blue-container">
       <h2>Prescriptions from the Comfort of Home</h2>
-      <p>EasyGlasses is the most convenient way to get your glasses or contacts prescription. The exam is free to take, only pay for your prescription</p>
+      <p>EasyGlasses is the most convenient way to get your glasses or contacts prescription. The exam is free to take, only pay for your prescription.</p>
       <% if current_user != nil %>
-        <%= link_to "Test your sight!", exams_path, class: " navbar-wagon-button bandeau" %>
+        <%= link_to "Test your sight!", exams_path, method: "post", class: " navbar-wagon-button bandeau" %>
       <% else %>
         <%= link_to "Test your sight!", new_user_registration_path, class: " navbar-wagon-button bandeau" %>
   <!--         <div id="bandeau" class="navbar-wagon-button">
