--- a/app/views/exams/mobile_questions.html.erb
+++ b/app/views/exams/mobile_questions.html.erb
@@ -9,36 +9,41 @@
     </div>
   </div>
   <div id="slide-2" class="hidden">
-    <p style="font-size: 20px; margin-bottom: 30px">Select the object you see.</p>
-    <div class="flexbox">
-      <div class="flex-item">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button" do %>
-          <div style="transform: rotate(0deg)">
-            E
-          </div>
-        <% end %>
-      </div>
-      <div class="flex-item vertical-items">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button" do %>
-          <div style="transform: rotate(90deg)">
-            E
-          </div>
-        <% end %>
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button" do %>
-          <div style="transform: rotate(270deg)">
-            E
-          </div>
-        <% end %>
-      </div>
-      <div class="flex-item">
-        <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button" do %>
-          <div style="transform: rotate(180deg)">
-            E
-          </div>
-        <% end %>
+    <p style="font-size: 20px; margin-bottom: 30px; text-align:center;">Select the object you see.</p>
+    <div class="container">
+      <div class="flexbox">
+        <div class="flex-item">
+          <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 4), method: :post, class: "mobile-button" do %>
+            <div style="transform: rotate(0deg)">
+              E
+            </div>
+          <% end %>
+        </div>
+        <div class="flex-item vertical-items">
+          <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 1), method: :post, class: "mobile-button" do %>
+            <div style="transform: rotate(90deg)">
+              E
+            </div>
+          <% end %>
+          <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 3), method: :post, class: "mobile-button" do %>
+            <div style="transform: rotate(270deg)">
+              E
+            </div>
+          <% end %>
+        </div>
+        <div class="flex-item">
+          <%= link_to user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 2), method: :post, class: "mobile-button" do %>
+            <div style="transform: rotate(180deg)">
+              E
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
-  <%= link_to "Can't tell", user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 0), method: :post, class: "btn btn-primary", style: "margin-top: -80px" %>
+
+    <div class="container text-center">
+      <%= link_to "Can't tell", user_answers_path(:question_position => (Exam.find(params[:id]).user_answers.count + 1), :answered_orientation => 0), method: :post, class: "btn btn-primary", style: "margin-top: -80px" %>
+    </div>
   </div>
 
   <div id="slide-4" style="background-image: linear-gradient(to left, rgba(48,67,82,0.4), rgba(215,210,204,0.3)), url(<%=image_url("cover_left.jpg")%>);" class="mobile-picture first-slide hidden">
