scroll pour l'historique des exams

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,7 +38,7 @@
           <i class= "fa fa-low-vision onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding", style="padding-bottom: 30px">
-          <div class="question", style="margin-top: 20px">
+          <div class="question fixed_div", style="margin-top: 20px">
             <% if @user.ophtalmo_exams.count == 0 %>
               <br>
               <p>You haven't taken any test yet!</p>
@@ -92,7 +92,7 @@
           <i class= "fa fa-low-vision onboarding-icon text-center"></i>
         </div>
         <div class="card-desktop-onboarding", style="padding-bottom: 30px">
-          <div class="question", style="margin-top: 20px">
+          <div class="question fixed_div", style="margin-top: 20px">
             <% if current_user.patient_exams.count == 0 %>
               <br>
               <p>You haven't taken any test yet!</p>
