--- a/app/views/users/unable_user.html.erb
+++ b/app/views/users/unable_user.html.erb
@@ -2,7 +2,7 @@
   <div class="container container-min-height">
     <h2 class="text-center">We're sorry <%= @user.first_name %>, you are not able to take the test.</h2>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 text-center">
         <% if @user.pregnant == true %>
           <h4>The EasyGlasses online exam is not appropriate for pregnant women.</h4>
         <% elsif @user.chronic_health_conditions == true %>
