--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -72,27 +72,27 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Edit prescription of <%= @exam.patient.first_name %> <%= @exam.patient.last_name %></h4>
+          <h4 class="modal-title text-center" id="myModalLabel">Edit prescription of <%= @exam.patient.first_name %> <%= @exam.patient.last_name %></h4>
         </div>
         <div class="modal-body">
           <%= form_for([@exam, @exam.prescription], remote: true) do |f| %>
             <div class="form-inputs container">
               <div class="row">
-                <div class="col-xs-6 col-sm-6" style="margin:auto">
-                  <%= f.label :ophtalmo_score_left, 'Enter the correction for the left eye' %><br />
-                  <%= f.number_field :ophtalmo_score_left, step: 0.25 %>
+                <div class="col-xs-6 col-sm-6 form-group" style="margin:auto">
+                  <%= f.label :ophtalmo_score_left, 'Enter the correction for the left eye' %>
+                  <%= f.number_field :ophtalmo_score_left,step: 0.25, class: "form-control", prompt: "placeholder" %>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-6 col-sm-6">
+                <div class="col-xs-6 col-sm-6 form-group">
                   <%= f.label :ophtalmo_score_right, 'Enter the correction for the right eye' %><br />
-                  <%= f.number_field :ophtalmo_score_right, step: 0.25 %>
+                  <%= f.number_field :ophtalmo_score_right, step: 0.25,class: "form-control" %>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-6 col-sm-6">
+                <div class="col-xs-6 col-sm-6 form-group">
                   <%= f.label :description, 'Please add a general comment on the prescription' %><br />
-                  <%= f.text_area(:description, size: '60x4') %>
+                  <%= f.text_area(:description, size: '60x4', class: "form-control") %>
                 </div>
               </div>
             </div>
