--- a/app/views/prescriptions/pdf_prescription.html.erb
+++ b/app/views/prescriptions/pdf_prescription.html.erb
@@ -5,6 +5,8 @@
     <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
   </head>
   <body>
+    <div style="height: 100px; text-align: center;"><%= wicked_pdf_image_tag('icon-glasses.png') %></div>
+    <div style="text-align: center; font-size: 20px; font-weight: bold;">EasyGlasses</div>
     <br>
     <br>
     <br>
@@ -23,7 +25,7 @@
     <br>
     <br>
     <br>
-    <div style="font-weight: bold;">Object: Prescrition following EasyGlasses online test</div>
+    <div style="font-weight: bold;">Object: Prescrition following your EasyGlasses online test</div>
     <br>
     <br>
     <br>
