--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
   <div class="wrapper-grey-padding-top">
     <div class="container container-min-height">
-    <h1 style="text-align: center; margin-bottom: 40px;"><%= 'Hello, ' %><%= @user.first_name %></h1>
+    <h1 style="text-align: center; margin-bottom: 40px;"> <% if @user.ophtalmo == false %> <%= 'Hello, ' %><%= @user.first_name %> <% else %> <%= 'Hello, Doctor ' %><%= @user.last_name %> <% end %> </h1>
     <hr>
 
     <div class="row">
@@ -13,11 +13,11 @@
             <div class="row">
               <div class="col-xs-6">
                 <h4>Name: <%= @user.first_name %> <%= @user.last_name %> </h4>
-                <h4>Date of birth: <%= @user.date_of_birth.strftime("%d/%m/%Y") %> </h4>
+                <% if @user.ophtalmo == false %> <h4>Date of birth: <%= @user.date_of_birth.strftime("%d/%m/%Y") %> </h4> <% end %>
                 <h4>City: <%= @user.city %> </h4>
               </div>
               <div class="col-xs-6">
-                <h4>Shoe size: <%= @user.shoe_size %> </h4>
+                <% if @user.ophtalmo == false %> <h4>Shoe size: <%= @user.shoe_size %> </h4> <% end %>
                 <h4>Email: <%= @user.email %> </h4>
                 <h4>Phone number: +33<%= @user.phone_number %> </h4>
               </div>
@@ -49,7 +49,7 @@
             <div class="row", style="margin-bottom: 20px">
               <div class="col-xs-6">
                 <div class="card", style="background: #DBE2EF; color: black">
-                  <div class="card_title">Vision test n°<%= vision_test_number %></div>
+                  <div class="card_title">Vision test of <%= exam.patient.first_name %> <%= exam.patient.last_name %></div>
                   <% vision_test_number += 1 %>
                   <div class="test_results">
                     <h2>Vision score: <%= exam.score_total %></h2>
@@ -69,6 +69,7 @@
                       <p style="color: #112D4E; margin-top: 18%">PRESCRIPTION STATUS: PENDING</p>
                     <% elsif exam.prescription.status == "Sent" %>
                       <p style="color: #60B65B; margin-top: 18%">PRESCRIPTION STATUS: SENT</p>
+                      <p><%= exam.prescription.description %></p>
                     <% end %>
                   <% else %>
                     <p style="color: #D23333; margin-top: 18%">PRESCRIPTION STATUS: NOT REQUESTED</p>
@@ -122,7 +123,8 @@
                     <% if exam.prescription.status == "Pending" %>
                       <p style="color: #112D4E; margin-top: 18%">PRESCRIPTION STATUS: PENDING</p>
                     <% elsif exam.prescription.status == "Sent" %>
-                      <p style="color: #60B65B; margin-top: 18%">PRESCRIPTION STATUS: SENT</p>
+                      <p style="color: #60B65B; margin-top: 10%">PRESCRIPTION STATUS: SENT</p>
+                      <p><%= exam.prescription.description %></p>
                     <% end %>
                   <% else %>
                     <p style="color: #D23333; margin-top: 18%">PRESCRIPTION STATUS: NOT REQUESTED</p>
