--- a/app/views/exams/desktop_results.html.erb
+++ b/app/views/exams/desktop_results.html.erb
@@ -46,7 +46,7 @@
                 <% else %>
                   <!-- Button trigger modal -->
                   <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                    Edit precription
+                    Edit prescription
                   </button>
                 <% end %>
               <% elsif @exam.prescription.status == "Sent" %>
